# edi

./: .copier-answers.yml  .flake8  .pre-commit-config.yaml  README.md  requirements.txt  test-requirement.txt
.github/workflows/: pre-commit.yml  test.yml
account_edi_ubl_cii_payment_unece/: README.rst  __manifest__.py
account_edi_ubl_cii_payment_unece/data/: account_payment_method.xml
account_edi_ubl_cii_payment_unece/i18n/: account_edi_ubl_cii_payment_unece.pot  it.po
account_edi_ubl_cii_payment_unece/models/: __init__.py  account_edi_ubl.py  account_edi_xml_cii.py  account_edi_xml_ubl_bis3.py  account_payment_method.py
account_edi_ubl_cii_payment_unece/readme/: CONTRIBUTORS.md  DESCRIPTION.md
account_edi_ubl_cii_payment_unece/tests/: __init__.py  common.py  test_account_edi_cii.py  test_account_edi_ubl_bis3.py
account_einvoice_generate/: README.rst  __manifest__.py
account_einvoice_generate/i18n/: it.po  sv.po
account_invoice_download/: README.rst  __manifest__.py
account_invoice_download/data/: cron.xml
account_invoice_download/i18n/: account_invoice_download.pot  it.po  sv.po
account_invoice_download/models/: __init__.py  account_invoice_download_config.py  account_invoice_download_log.py  res_partner.py
account_invoice_download/readme/: CONFIGURE.md  DESCRIPTION.md  INSTALL.md
account_invoice_download/security/: ir.model.access.csv  rule.xml
account_invoice_download/views/: account_invoice_download_log.xml  (+2 more)
account_invoice_download_ovh/: README.rst  __manifest__.py
account_invoice_download_scaleway/: README.rst
account_invoice_export/: README.rst  __manifest__.py
account_invoice_export_job/: README.rst
account_invoice_export_server_env/: README.rst
account_invoice_facturx/: README.rst  __manifest__.py
account_invoice_facturx_py3o/: README.rst  __manifest__.py
account_invoice_import/: README.rst  __manifest__.py
account_invoice_import_facturx/: README.rst
account_invoice_import_simple_pdf/: README.rst  __manifest__.py
account_invoice_import_ubl/: README.rst
base_business_document_import/: README.rst  __manifest__.py
base_business_document_import_phone/: README.rst  __manifest__.py
base_ebill_payment_contract/: README.rst
base_edifact/: README.rst  __manifest__.py
base_facturx/: README.rst
base_import_pdf_by_template/: README.rst  __manifest__.py
base_import_pdf_by_template_account/: README.rst  __manifest__.py
base_ubl_generate/: README.rst  __manifest__.py
base_ubl_parse/: __manifest__.py
edi_sale_ubl_input_oca/: __manifest__.py
edi_voxel_oca/: README.rst
edi_voxel_secondary_unit_oca/: README.rst
edi_voxel_stock_picking_oca/: README.rst  __manifest__.py
partner_identification_import/: README.rst  __manifest__.py
purchase_order_ubl/: README.rst  __manifest__.py
sale_order_customer_free_ref/: README.rst
sale_order_import/: README.rst  __manifest__.py
sale_order_import_packaging/: README.rst
sale_order_import_ubl/: README.rst
sale_order_import_ubl_customer_free_ref/: README.rst
sale_order_import_ubl_line_customer_ref/: README.rst
sale_order_packaging_import/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+219 files in other folders)
