[project]
name = "odoo-addons-oca-edi"
version = "18.0.20250610.0"
dependencies = [
    "odoo-addon-account_einvoice_generate==18.0.*",
    "odoo-addon-account_invoice_facturx==18.0.*",
    "odoo-addon-base_edi==18.0.*",
    "odoo-addon-base_facturx==18.0.*",
    "odoo-addon-edi_voxel_oca==18.0.*",
    "odoo-addon-edi_voxel_secondary_unit_oca==18.0.*",
    "odoo-addon-edi_voxel_stock_picking_oca==18.0.*",
    "odoo-addon-sale_order_customer_free_ref==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
